Test/2-7_cluster.clu
Cluster size 2
Cluster number 70102        # E:      Factor:7  P:  , Ori size:2    Sub:2    From:7           
   2    7     fam_2_1           1-119      1   leng: 118
   2    7     fam_2_2           1-119      1   leng: 118
